# ToMD

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: PRIVACY.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-06-23-design-language-extractor-mvp.md
docs/superpowers/specs/: 2026-06-23-design-language-extractor-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/design-analysis/: Cargo.toml
src-tauri/crates/design-analysis/src/: lib.rs  orchestrator.rs  prompt.rs  refine.rs  repair.rs
src-tauri/crates/design-analysis/tests/: orchestrator.rs  refine.rs
src-tauri/crates/design-analysis/tests/fixtures/: invalid-response.json
src-tauri/crates/design-core/: Cargo.toml
src-tauri/crates/design-core/src/: lib.rs  markdown.rs  model.rs  validation.rs
src-tauri/crates/design-core/tests/: bindings.rs  markdown.rs  schema.rs
src-tauri/crates/design-core/tests/fixtures/: accepted-design.md  accepted-spec.json
src-tauri/crates/design-providers/: Cargo.toml
src-tauri/crates/design-providers/src/: anthropic.rs  client.rs  config.rs  credentials.rs  error.rs  extract.rs  gemini.rs  lib.rs  models.rs  openai.rs  openai_compatible.rs
src-tauri/crates/design-providers/tests/: anthropic.rs  credentials.rs  gemini.rs  models.rs  openai.rs  openai_compatible.rs
src-tauri/crates/design-providers/tests/common/: mod.rs
src-tauri/crates/design-storage/: Cargo.toml
src-tauri/crates/design-storage/src/: lib.rs  migrations.rs  projects.rs  screenshots.rs
src-tauri/crates/design-storage/tests/: projects.rs  screenshots.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: analysis.rs  exports.rs  mod.rs  projects.rs  providers.rs  rules.rs  screenshots.rs
src-tauri/tests/: end_to_end.rs
src-tauri/tests/fixtures/: provider-invalid.json  provider-success.json
src/app/: App.test.tsx  App.tsx  AppShell.tsx  i18n.ts  styles.css  theme.ts
src/components/ui/: index.tsx
src/components/workflow/: WorkflowStepper.tsx
src/features/analysis/: AnalysisStartPage.test.tsx  AnalysisStartPage.tsx
src/features/exports/: ExportHistoryPage.test.tsx  ExportHistoryPage.tsx
src/features/projects/: NewProjectDialog.tsx  ProjectListPage.test.tsx  ProjectListPage.tsx
src/features/providers/: ProviderSettingsPage.test.tsx  ProviderSettingsPage.tsx
src/features/screenshots/: ScreenshotManagerPage.test.tsx  ScreenshotManagerPage.tsx
src/features/settings/: SettingsModal.test.tsx  SettingsModal.tsx
src/features/workbench/: EvidencePanel.tsx  FineTuneChat.test.tsx  FineTuneChat.tsx  MarkdownPreview.tsx  RuleEditor.tsx  WorkbenchPage.test.tsx  WorkbenchPage.tsx  ruleGroups.ts
src/lib/: desktop.test.ts  desktop.ts  networkCounter.ts  providerVerification.ts
tests/: privacy.test.ts  vite-config.test.ts
