[package]
name = "design-language-extractor"
version = "0.1.0"
description = "A local design language extraction application"
authors = ["ToMD"]
edition = "2021"

[workspace]
members = [
    "crates/design-analysis",
    "crates/design-core",
    "crates/design-providers",
    "crates/design-storage",
]
resolver = "2"

[lib]
name = "design_language_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
