[package]
name = "design-language-extractor"
version = "0.1.0"
description = "A local design language extraction application"
authors = ["ToMD"]
edition = "2021"

[workspace]
members = [
    "crates/design-analysis",
    "crates/design-core",
    "crates/design-providers",
    "crates/design-storage",
]
resolver = "2"

[lib]
name = "design_language_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
design-analysis = { path = "crates/design-analysis" }
design-core = { path = "crates/design-core" }
design-providers = { path = "crates/design-providers" }
design-storage = { path = "crates/design-storage" }
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
