[package]
name = "design-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "1", features = ["chrono04", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ts-rs = { version = "11", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }
