[package]
name = "design-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
